--- a/public/chat.html
+++ b/public/chat.html
@@ -29,8 +29,8 @@
 
         <div id="messages" class="chat__messages"></div>
        <div class="bottom-side">
-           <div class="typing-template">
-               dsfzdvczsd
+           <div id="typing-message" class="typing-template">
+               {{message}}
            </div>
            <div class="compose">
 
